--- a/schedule.html
+++ b/schedule.html
@@ -333,7 +333,7 @@ $(document).ready(function () {
 <ul>
 <li>Due TBD;</li>
 <li><a href="./assignments/assignment02.html">html file</a></li>
-<li><a href="./data/cat.csv">cat.csv dataset</a></li>
+<li><a href="./data/cat_2.csv">cat.csv dataset</a></li>
 </ul>
 </div>
 <div id="weeks-5---7" class="section level3">
