--- a/slides/EDUC641_2_categ_2.html
+++ b/slides/EDUC641_2_categ_2.html
@@ -4,7 +4,7 @@
     <title>Examining the relationship between categorical variables</title>
     <meta charset="utf-8" />
     <meta name="author" content="TBD" />
-    <script src="EDUC641_2_categ_2_files/header-attrs-2.9/header-attrs.js"></script>
+    <script src="EDUC641_2_categ_2_files/header-attrs-2.8/header-attrs.js"></script>
     <link href="EDUC641_2_categ_2_files/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link rel="stylesheet" href="new.css" type="text/css" />
   </head>
@@ -194,30 +194,27 @@ it might be helpful to imagine what the proportion of defendants sentenced to de
 &lt;table&gt;
  &lt;thead&gt;
   &lt;tr&gt;
+   &lt;th style="text-align:left;"&gt;   &lt;/th&gt;
    &lt;th style="text-align:left;"&gt; deathpen &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; Black &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; White &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; Sum &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Black &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; White &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Sum &lt;/th&gt;
   &lt;/tr&gt;
  &lt;/thead&gt;
 &lt;tbody&gt;
   &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; No &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 1425 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 921 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 2346 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; df3 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 1:2 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; c(1425, 78) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; c(921, 51) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; c(2346, 129) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Yes &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 78 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 51 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 129 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Sum &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 1503 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 972 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 2475 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; sum_vict &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 1 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 1503 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 972 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2475 &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
@@ -247,30 +244,27 @@ it might be helpful to imagine what the proportion of defendants sentenced to de
 &lt;table&gt;
  &lt;thead&gt;
   &lt;tr&gt;
+   &lt;th style="text-align:left;"&gt;   &lt;/th&gt;
    &lt;th style="text-align:left;"&gt; deathpen &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; Black &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; White &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; Sum &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Black &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; White &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Sum &lt;/th&gt;
   &lt;/tr&gt;
  &lt;/thead&gt;
 &lt;tbody&gt;
   &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; No &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 1425 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 921 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 2346 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; df3 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 1:2 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; c(1425, 78) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; c(921, 51) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; c(2346, 129) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Yes &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 78 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 51 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 129 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Sum &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 1503 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 972 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 2475 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; sum_vict &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 1 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 1503 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 972 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2475 &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
@@ -300,30 +294,27 @@ We can summarize the **NET DISCREPANCY** between the tables of **OBSERVED** and 
 &lt;table&gt;
  &lt;thead&gt;
   &lt;tr&gt;
+   &lt;th style="text-align:left;"&gt;   &lt;/th&gt;
    &lt;th style="text-align:left;"&gt; deathpen &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; Black &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; White &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; Sum &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Black &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; White &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Sum &lt;/th&gt;
   &lt;/tr&gt;
  &lt;/thead&gt;
 &lt;tbody&gt;
   &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; No &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 1425 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 921 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 2346 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; df3 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 1:2 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; c(1425, 78) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; c(921, 51) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; c(2346, 129) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Yes &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 78 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 51 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 129 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Sum &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 1503 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 972 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 2475 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; sum_vict &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 1 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 1503 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 972 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2475 &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
@@ -363,30 +354,27 @@ We can summarize the **NET DISCREPANCY** between the tables of **OBSERVED** and 
 &lt;table&gt;
  &lt;thead&gt;
   &lt;tr&gt;
+   &lt;th style="text-align:left;"&gt;   &lt;/th&gt;
    &lt;th style="text-align:left;"&gt; deathpen &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; Black &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; White &lt;/th&gt;
-   &lt;th style="text-align:right;"&gt; Sum &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Black &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; White &lt;/th&gt;
+   &lt;th style="text-align:left;"&gt; Sum &lt;/th&gt;
   &lt;/tr&gt;
  &lt;/thead&gt;
 &lt;tbody&gt;
   &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; No &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 1425 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 921 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 2346 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; df3 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 1:2 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; c(1425, 78) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; c(921, 51) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; c(2346, 129) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Yes &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 78 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 51 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 129 &lt;/td&gt;
-  &lt;/tr&gt;
-  &lt;tr&gt;
-   &lt;td style="text-align:left;"&gt; Sum &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 1503 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 972 &lt;/td&gt;
-   &lt;td style="text-align:right;"&gt; 2475 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; sum_vict &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 1 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 1503 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 972 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 2475 &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
