--- a/slides/tutorial.html
+++ b/slides/tutorial.html
@@ -35,11 +35,11 @@ name: toc
 
 1. [Terminologies](#term) 
 
-2. [Instructions](#instr)
+2. [Your steps to finish for this tutorial](#instr)
 
-3. [Software Installation Demo](#demo)
+3. [Software installation demo](#demo)
 
-4. [Hands-on Activity (Week 1 Participation Point)](#activity)
+4. [Hands-on activity (Week 1 participation points attached)](#activity)
 
 ---
 name: term
@@ -55,24 +55,24 @@ name: term
 
 ---
 name: instr
-# Instructions
+# Your Steps to Finish:
 
 1. Download [R](https://www.r-project.org/) and install it in your computer
 
 2. Download [RStudio Desktop](https://www.rstudio.com/products/rstudio/download/preview/) and install it in your computer
 
-3. Get to know your RStudio; open RStudion desktop and finish the hands-on activity (week 1 participation point attached)
+3. Get to know your RStudio and finish the hands-on activity (week 1 participation point attached)
 
 ---
 name: demo
-# Installation Demo - R
+# Demo - Install R
 
 Download R (then install it in your computer):
 
 &lt;img src="./pics/download_r.gif" width="85%" style="display: block; margin: auto;" /&gt;
 
 ---
-# Installation Demo - RStudio
+# Demo - Install RStudio
 
 Download RStudio Desktop (then install it in your computer):
 
@@ -82,9 +82,13 @@ Download RStudio Desktop (then install it in your computer):
 name: activity
 # RStudio Hands-on Activity
 
-Open your RStudio, run these below code in your console line-by-line, copy and paste the results in a word document, and submit the doc to Canvas to get the first week's participation point (deadline is before our first class meeting).
+Open your RStudio, run these below code in your console line-by-line, copy and paste the results in a **word document**.
 
-&lt;img src="./pics/console.png" width="50%" style="display: block; margin: auto;" /&gt;
+Create a new project in your local and an **R script** under that project, write the same code.
+
+Submit the word doc AND the R script to Canvas to get the first week's participation point (deadline is before our first class meeting). You'll be doing this for all the assignments over this term so let's get started now.
+
+&lt;img src="./pics/console_simplified.png" width="50%" style="display: block; margin: auto;" /&gt;
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
